Avalara Fullqa/src/PFLSwagIQ/objects/SwagIQ_Workflow_Rule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Stores whether the rule is currently active. Should be false for new rules, to allow the interface to activate it.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Type__c</fullName>
        <inlineHelpText>The type of relationship the assigned to field is. Uses workflow syntax.</inlineHelpText>
        <label>Assigned To Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <inlineHelpText>Who the workflow task should be assigned to. Uses workflow syntax, so a name or id won&apos;t work.</inlineHelpText>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A description of what the workflow is for. Populates the &quot;Description&quot; field of a workflow rule.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Offset__c</fullName>
        <inlineHelpText>For &quot;Workflow&quot; type rules, the offset in days that a task will be entered for, relative to the day the workflow created the task.
For &quot;Time&quot; or &quot;Universal&quot; rules, the offset in days from the target field to be examined.</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <inlineHelpText>For criteria-based workflow, the field to examine.</inlineHelpText>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Operation__c</fullName>
        <inlineHelpText>For criteria-based workflow, the operation to be performed. Uses specific workflow syntax.</inlineHelpText>
        <label>Filter Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <inlineHelpText>For criteria-based workflow, the value we&apos;re looking for.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Id__c</fullName>
        <inlineHelpText>The SwagIQ Id of the gift to be auto sent. This will be populated by the SwagIQ Tools page.</inlineHelpText>
        <label>Gift Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Name__c</fullName>
        <inlineHelpText>The SwagIQ Name of the gift to be auto sent. This will be populated by the SwagIQ Tools page.</inlineHelpText>
        <label>Gift Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_If_Auto_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System use, default to False</inlineHelpText>
        <label>Ignore If Auto-Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Message__c</fullName>
        <inlineHelpText>Internal use.</inlineHelpText>
        <label>Metadata Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to notify the assignee of a workflow-generated task.</inlineHelpText>
        <label>Notify Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>Comma-separated list of objects on which this workflow should work. For &quot;Workflow&quot; types, should be a single object. For &quot;Timed&quot; or &quot;Universal&quot;, can be more than one.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_From_Field__c</fullName>
        <inlineHelpText>For &quot;Timed&quot; rules, the field we&apos;re comparing with the offset date.</inlineHelpText>
        <label>Offset From Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset_Multiplier__c</fullName>
        <inlineHelpText>For &quot;Timed&quot; rules, whether the offset is in the past (-1) or in the future (1).</inlineHelpText>
        <label>Offset Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Install_Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal use. Set to &quot;true&quot;.</inlineHelpText>
        <label>Post Install Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>The inserted task&apos;s priority.</inlineHelpText>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rules_Description__c</fullName>
        <inlineHelpText>The description of the rule, as it appears in the SwagIQ Tools page.</inlineHelpText>
        <label>Rules Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Type__c</fullName>
        <inlineHelpText>The send type, either &quot;Auto Send&quot; or &quot;Create Task&quot;.</inlineHelpText>
        <label>Send Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The status of the inserted task.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>The subject of the inserted task.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <inlineHelpText>The inserted task&apos;s description.</inlineHelpText>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <inlineHelpText>The name of the inserted task.</inlineHelpText>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <inlineHelpText>The workflow&apos;s trigger type. Uses specific workflow syntax.</inlineHelpText>
        <label>Trigger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type of rule:
Workflow - Standard formula- or criteria-based workflow, including task information.
Timed - Evaluated once a day, usually looking for a day offset from a date field.
Universal -  Applied to all rules.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <inlineHelpText>The formula for formula-based workflows.</inlineHelpText>
        <label>formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SwagIQ Workflow Rule</label>
</CustomObject>